--- a/beattyFrame/Base.lproj/Main.storyboard
+++ b/beattyFrame/Base.lproj/Main.storyboard
@@ -429,10 +429,10 @@
                                             </mask>
                                         </variation>
                                     </view>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eia-ph-AoR" userLabel="Gallery">
+                                    <button opaque="NO" alpha="0.80000000000000004" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eia-ph-AoR" userLabel="Gallery">
                                         <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                         <fontDescription key="fontDescription" name="GoodPro-Book" family="GoodPro" pointSize="14"/>
-                                        <state key="normal" image="grfx_menuGallery.jpg">
+                                        <state key="normal" image="grfx-icon-gallery.png">
                                             <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </state>
@@ -1205,8 +1205,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="grfx-icon-gallery.png" width="21" height="21"/>
         <image name="grfx_closeBtn.png" width="25" height="25"/>
-        <image name="grfx_menuGallery.jpg" width="23" height="19"/>
         <image name="grfx_menuRestart.jpg" width="23" height="14"/>
         <image name="grfx_menuSettings.jpg" width="24" height="21"/>
         <image name="grfx_menuWebcam.jpg" width="18" height="11"/>
